<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/PublisherDisplayFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPublisherDisplay"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Publisher Address -->

    <EditText
        android:id="@+id/editTextPubId"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="132dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPubId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="4dp"
        android:text="@string/textViewPubId"
        app:layout_constraintEnd_toStartOf="@+id/editTextPubId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPubName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/textViewPubName"
        app:layout_constraintEnd_toStartOf="@+id/editTextPubName"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPubId" />

    <EditText
        android:id="@+id/editTextPubName"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextPubId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPubId"
        app:layout_constraintTop_toBottomOf="@+id/editTextPubId" />

    <!-- Previous and Next Buttons -->

    <TextView
        android:id="@+id/textViewPubAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/textViewPubAdd"
        app:layout_constraintEnd_toStartOf="@+id/editTextPubAdd"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPubName" />

    <EditText
        android:id="@+id/editTextPubAdd"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextPubName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPubName"
        app:layout_constraintTop_toBottomOf="@+id/editTextPubName" />

    <Button
        android:id="@+id/buttonPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:text="Prev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPubAdd" />

    <!-- Publisher Details Button -->
    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="108dp"
        android:text="@string/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPubAdd" />

    <Button
        android:id="@+id/buttonPublisherDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPublisherDetails"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/showBookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/show_book"
        app:layout_constraintEnd_toEndOf="@+id/buttonPublisherDetails"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/buttonPublisherDetails"
        app:layout_constraintTop_toBottomOf="@+id/buttonPublisherDetails" />

</androidx.constraintlayout.widget.ConstraintLayout>