<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBook"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextBookId"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBookId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="28dp"
        android:text="@string/book_id"
        app:layout_constraintEnd_toStartOf="@+id/editTextBookId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/book_author"
        app:layout_constraintEnd_toStartOf="@+id/editTextBookAuthor"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookId" />

    <EditText
        android:id="@+id/editTextBookAuthor"
        app:layout_constraintEnd_toEndOf="@+id/editTextBookId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextBookId"
        app:layout_constraintTop_toBottomOf="@+id/editTextBookId"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:inputType="text"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/textViewBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Book Title"
        app:layout_constraintEnd_toStartOf="@+id/editTextBookTitle"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookAuthor" />

    <EditText
        android:id="@+id/editTextBookTitle"
        app:layout_constraintEnd_toEndOf="@+id/editTextBookAuthor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextBookAuthor"
        app:layout_constraintTop_toBottomOf="@+id/editTextBookAuthor"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:inputType="text"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textViewBookISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bookisbn"
        app:layout_constraintEnd_toStartOf="@+id/editTextISBN"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookTitle" />

    <EditText
        android:id="@+id/editTextISBN"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextBookAuthor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextBookAuthor"
        app:layout_constraintTop_toBottomOf="@+id/editTextBookTitle" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/book_type"
        app:layout_constraintEnd_toStartOf="@+id/spinner1"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookISBN" />

     <Spinner
        android:id="@+id/spinner1"
        android:layout_width="288dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextISBN"
        app:layout_constraintStart_toEndOf="@+id/textViewBookISBN"
        app:layout_constraintTop_toBottomOf="@+id/editTextISBN" />

    <TextView
        android:id="@+id/textViewBookPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/book_price"
        app:layout_constraintEnd_toStartOf="@+id/editTextPrice"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/spinner1"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/spinner1"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <TextView
        android:id="@+id/textViewBookTld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/book_pld"
        app:layout_constraintEnd_toStartOf="@+id/spinnerBookPld"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookPrice" />

    <Spinner
        android:id="@+id/spinnerBookPld"
        android:layout_width="288dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPrice"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <Button
        android:id="@+id/addBookButton"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/add_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBookPld" />

    <Button
        android:id="@+id/addChapterButton"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:text="Add chapter list to this book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookButton" />


</androidx.constraintlayout.widget.ConstraintLayout>