<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChapterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarChapter"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textViewBookInfoChapter"
        android:layout_width="215dp"
        android:layout_height="59dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextChapIdChapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textViewChapIdChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/chap_id"
        app:layout_constraintEnd_toStartOf="@+id/editTextChapIdChapter"
        app:layout_constraintTop_toTopOf="@+id/textViewBookInfoChapter" />

    <EditText
        android:id="@+id/editTextChapIdChapter"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/textViewBookInfoChapter"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="@+id/textViewBookInfoChapter"
        app:layout_constraintTop_toTopOf="@+id/textViewBookInfoChapter" />

    <TextView
        android:id="@+id/textViewPubAddChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/pub_add"
        app:layout_constraintEnd_toStartOf="@+id/editTextPubAddChapter"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChapIdChapter" />

    <EditText
        android:id="@+id/editTextPubAddChapter"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextChapIdChapter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextChapIdChapter"
        app:layout_constraintTop_toBottomOf="@+id/editTextChapIdChapter" />
    <!-- Publisher Address -->

    <TextView
        android:id="@+id/PubPriceChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/pub_price"
        app:layout_constraintEnd_toStartOf="@+id/editTextPubPriceChapter"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPubAddChapter" />

    <EditText
        android:id="@+id/editTextPubPriceChapter"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextPubAddChapter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPubAddChapter"
        app:layout_constraintTop_toBottomOf="@+id/editTextPubAddChapter" />

    <!-- Publisher Update Button -->
    <Button
        android:id="@+id/buttonAddChapter"
        android:layout_width="192dp"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:text="Add chapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPubPriceChapter" />

</androidx.constraintlayout.widget.ConstraintLayout>